# service-apis-py

./: .bumpversion.cfg  .bumpversion.toml  .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  README.md  ReadMe.md  mypy.ini  pyproject.toml  ruff.toml  taskfile.yml
.github/workflows/: ci.yml  create-release.yml  publish.yml  release.yml  version-bump.yml
scripts/: fix_imports.py
src/agentic_mesh_protocol/: __init__.py  __version__.py
src/digitalkin_proto/: __init__.py  __version__.py
test/: test_imports.py
