[build-system]
requires = ["setuptools>=75.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-mesh-protocol"
version = "0.2.1.dev0"
description = "Python gRPC interfaces for Agentic Mesh Protocol"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["digitalkin", "agentic-mesh", "agent", "grpc", "sdk", "protocol"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed",
    "License :: Other/Proprietary License",
]
dependencies = [
    "googleapis-common-protos>=1.72.0",
    "protovalidate>=1.0.0",
    "grpcio>=1.76.0",
    "grpcio-tools>=1.76.0",
    "protobuf>=6.33.1",
    "bump-my-version>=1.2.4",
]

[project.urls]
"Homepage" = "https://github.com/DigitalKin-ai/service-apis-py"
"Bug Tracker" = "https://github.com/DigitalKin-ai/service-apis-py/issues"
"Documentation" = "https://github.com/DigitalKin-ai/service-apis-py/blob/main/README.md"

[[project.authors]]
name = "DigitalKin.ai"
email = "contact@digitalkin.ai"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "ruff>=0.14.7",
    "mypy>=1.19.0",
    "pre-commit>=4.5.0",
    "bump-my-version>=1.2.4",
    "build>=1.3.0",
    "twine>=6.2.0",
]

test = ["pytest>=8.4.2"]

lint = ["ruff>=0.14.3", "pre-commit>=4.3.0"]

build = ["build>=1.3.0", "twine>=6.2.0", "bump-my-version>=1.2.4"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agentic_mesh_protocol = ["**/*.pyi", "py.typed"]
buf = ["**/*.pyi"]

[tool.ruff]
src = ["src", "tests"]
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
