[build-system]
    build-backend = "setuptools.build_meta"
    requires      = [ "setuptools>=75.8.0", "wheel" ]

[project]
    classifiers = [
        "Development Status :: 3 - Alpha",
        "Intended Audience :: Developers",
        "License :: Other/Proprietary License",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3 :: Only",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.13",
        "Programming Language :: Python",
        "Topic :: Software Development :: Libraries",
        "Typing :: Typed",
    ]
    dependencies = [
        "bump-my-version>=1.2.6",
        "googleapis-common-protos>=1.72.0",
        "grpcio-tools>=1.76.0",
        "grpcio>=1.76.0",
        "protobuf>=6.33.4",
        "protovalidate>=1.0.0",
    ]
    description = "Python gRPC interfaces for Agentic Mesh Protocol"
    keywords = [
        "agent",
        "agentic-mesh",
        "digitalkin",
        "grpc",
        "protocol",
        "sdk",
    ]
    name = "agentic-mesh-protocol"
    readme = "README.md"
    requires-python = ">=3.10"
    version = "0.2.1.dev5"

    [project.urls]
        "Bug Tracker"   = "https://github.com/DigitalKin-ai/service-apis-py/issues"
        "Documentation" = "https://github.com/DigitalKin-ai/service-apis-py/blob/main/README.md"
        "Homepage"      = "https://github.com/DigitalKin-ai/service-apis-py"

    [[project.authors]]
        email = "contact@digitalkin.ai"
        name  = "DigitalKin.ai"

[dependency-groups]
    dev = [
        "build>=1.3.0",
        "bump-my-version>=1.2.4",
        "mypy>=1.19.0",
        "pre-commit>=4.5.0",
        "pytest>=9.0.1",
        "ruff>=0.14.7",
        "twine>=6.2.0",
    ]

    test = [ "pytest>=8.4.2" ]

    lint = [ "pre-commit>=4.3.0", "ruff>=0.14.3" ]

    build = [ "build>=1.3.0", "bump-my-version>=1.2.4", "twine>=6.2.0" ]

[tool.setuptools]
    package-dir = { "" = "src" }

    [tool.setuptools.packages.find]
        where = [ "src" ]

    [tool.setuptools.package-data]
        agentic_mesh_protocol = [ "**/*.pyi", "py.typed" ]
        buf                   = [ "**/*.pyi" ]

[tool.ruff]
    src            = [ "src", "tests" ]
    target-version = "py310"

[tool.pytest.ini_options]
    python_files = "test_*.py"
    testpaths    = [ "tests" ]
